Add canonical map parent inheritance
Map rule and class configs now use canonical parent references (mode/map or base), with generated base profiles and stricter validation for missing or cyclic inheritance. This also adds safeguards for creating/removing maps, ensures related configuration reloads happen immediately, and updates documentation and tests for cross-mode parent support and base document generation.